Adding code to send custom object.

--- a/D365WebHookSamples.Plugins/D365WebHookSamples.Plugins.csproj
+++ b/D365WebHookSamples.Plugins/D365WebHookSamples.Plugins.csproj
@@ -56,7 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimmplePassThrough.cs" />
+    <Compile Include="CustomObject.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="SimplePassThrough.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
